--- a/modules/ROOT/pages/con_openshift-pipelines.adoc
+++ b/modules/ROOT/pages/con_openshift-pipelines.adoc
@@ -1,14 +1,13 @@
 [id="openshift-pipelines_{context}"]
 = OpenShift Pipelines
 
-OpenShift Pipelines are cloud-native, continuous integration and delivery solutions based on Kubernetes resources. It uses Tekton Pipelines to automate deployments across multiple platforms. Tekton introduces a number of standard Custom Resource Definitions (CRDs) for defining pipelines that are portable across Kubernetes distributions.
+OpenShift Pipelines are cloud-native, continuous integration and delivery solutions based on Kubernetes resources. It uses link:https://tekton.dev[Tekton] Pipelines to automate deployments across multiple platforms by abstracting away the underlying details. Tekton introduces a number of standard Custom Resource Definitions (CRDs) for defining pipelines that are portable across Kubernetes distributions.
 
-*Key Features:*
-
-* Designed for microservices and decentralized teams
-* Standard CI/CD pipelines definition that is easy to extend and integrate with existing tools, enabling you to scale on-demand
-* Build images with Kubernetes tools such as Source-to-Image (S2I), Buildah, Buildpacks and Kaniko
-* Deploy applications to multiple platforms such as Kubernetes, Serverless, and Virtual Machines (VMs) and are portable across any Kubernetes platform
+* OpenShift Pipelines are designed for microservices and decentralized teams
+* They are standard CI/CD pipeline definitions that are easy to extend and integrate with existing tools, enabling you to scale on-demand
+* You can use them to build images with Kubernetes tools such as Source-to-Image (S2I), Buildah, Buildpacks, and Kaniko and are portable across any Kubernetes platform
+* You can deploy applications to multiple platforms such as Kubernetes, Serverless, and Virtual Machines (VMs) and are portable across any Kubernetes platform
+* You can use the OpenShift Developer Console to see your Pipelines and integrate with them.
 
 
 [discrete]
