--- a/modules/ROOT/pages/con_pipelines-concepts.adoc
+++ b/modules/ROOT/pages/con_pipelines-concepts.adoc
@@ -2,7 +2,7 @@
 = Pipelines concepts
 
 
-The Custom Resource Definitions (CRDs) provided by OpenShift Pipelines include: `Task`,`Pipeline`,`PipelineRun`, `TaskRun`, and `PipelineResources`. 
+The Custom Resource Definitions (CRDs) provided by OpenShift Pipelines include: `Task`,`Pipeline`,`PipelineRun`, `TaskRun`, and `PipelineResources`.
 
 * A `Task` is the smallest configurable unit in a `Pipeline` and is essentially a function of inputs and outputs that inform the `Pipeline` build. It can run individually or as a part of a `Pipeline`. A `Pipeline` includes one or more `Tasks`, with a `Task` consisting of one or more steps. Steps are a series of commands that are sequentially executed by the `Task`.
 
@@ -18,7 +18,7 @@ The Custom Resource Definitions (CRDs) provided by OpenShift Pipelines include: 
 image::tekton_architecture.png[]
 
 
-.Additional information
+[discrete]
+== Additional resources
+
 * For more information on pipeline concepts, see the link:https://github.com/tektoncd/pipeline/tree/master/docs#learn-more[Tekton documentation].
-
-
