--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -1,15 +1,15 @@
 * xref:assembly_understanding-openshift-pipelines.adoc[1. Understanding OpenShift Pipelines]
-** xref:con_openshift-pipelines.adoc[What is OpenShift Pipelines?]
-** xref:con_openshift-pipeline-concepts.adoc[Operator Concepts]
+** xref:con_openshift-pipelines.adoc[1.1 OpenShift Pipelines]
+** xref:con_openshift-pipeline-concepts.adoc[1.2 Pipelines Concepts]
 * xref:assembly_installing-openshift-pipelines.adoc[2. Installation]
-** xref:proc_installing-openshift-pipelines-operator.adoc[Operator Installation]
-** xref:proc_creating-custom-resources-for-openshift-pipelines-operator.adoc[Creating Custom Resources]
+** xref:proc_installing-openshift-pipelines-operator.adoc[2.1 Operator Installation]
+** xref:proc_creating-custom-resources-for-openshift-pipelines-operator.adoc[2.2 Creating Custom Resources]
 * xref:assembly_using-openshift-pipelines.adoc[3. Using Pipelines]
-** xref:proc_deploying-an-application-to-openshift.adoc[Deploying an Application to OpenShift]
-** xref:proc_defining-and-creating-pipeline-tasks.adoc[Defining and Creating Pipeline Tasks]
-** xref:proc_defining-and-creating-pipelineresources.adoc[Defining and Creating Pipeline Resources]
-** xref:proc_assembling-a-pipeline.adoc[Assembling a Pipeline]
-** xref:proc_triggering-and-running-a-pipeline.adoc[Triggering and Running a Pipeline]
-** xref:proc_checking-pipeline-and-application-status.adoc[Checking Pipeline and Application Status]
+** xref:proc_deploying-an-application-to-openshift.adoc[3.1 Deploying an Application to OpenShift]
+** xref:proc_defining-and-creating-pipeline-tasks.adoc[3.2 Defining and Creating Pipeline Tasks]
+** xref:proc_defining-and-creating-pipelineresources.adoc[3.3 Defining and Creating Pipeline Resources]
+** xref:proc_assembling-a-pipeline.adoc[3.4 Assembling a Pipeline]
+** xref:proc_triggering-and-running-a-pipeline.adoc[3.5 Triggering and Running a Pipeline]
+** xref:proc_checking-pipeline-and-application-status.adoc[3.6 Checking Pipeline and Application Status]
 
 
