--- a/modules/ROOT/pages/proc_installing-pipelines-operator.adoc
+++ b/modules/ROOT/pages/proc_installing-pipelines-operator.adoc
@@ -9,7 +9,9 @@ OpenShift Pipelines can be installed by using the operator indexed in the OpenSh
 
 === Prerequisites
 
-* An OpenShift 4 cluster is required for installation. Visit link:https://try.openshift.com[try.openshift.com] for information on setting up an OpenShift 4 cluster.
+* An OpenShift 4 cluster is required for installation. Visit link:try.openshift.com[try.openshift.com] for information on setting up an OpenShift 4 cluster.
+* Download the Tekton CLI - `tkn`, and add it's location to your `PATH` environment variable.
+
 
 === Procedure
 . In the Web Console, navigate to *Catalog* -> *OperatorHub*.
