--- a/modules/ROOT/pages/proc_checking-pipeline-and-application-status.adoc
+++ b/modules/ROOT/pages/proc_checking-pipeline-and-application-status.adoc
@@ -1,4 +1,4 @@
-// Ths module is included in the following assembly:
+// This module is included in the following assembly:
 //
 // assembly_using-openshift-pipelines.adoc
 
@@ -10,17 +10,16 @@ You can examine the logs for `PipelineRuns` to verify its status.
 [discrete]
 === Procedure
 
-. Check the `PipelineRun` logs as follows:
+. Check the `PipelineRun` logs as it runs using the following command:
 +
 ----
-$ tkn pr logs petclinic-deploy-pipelinerun-lkq7d
+$ tkn pr logs petclinic-deploy-pipelinerun-q62p8 -f
+
+
 ...
-
-[s2i-java-8 : nop] Build successful
-
-[openshift-client : oc] deploymentconfig.apps.openshift.io/spring-petclinic rolled out
-
-[openshift-client : nop] Build successful
+[build : nop] Build successful
+[deploy : build-step-oc] deploymentconfig.apps.openshift.io/spring-petclinic rolled out
+[deploy : nop] Build successful
 ----
 
 . Check the *Project Status* in the OpenShift Web Console to verify that the PetClinic image is successfully built and deployed.
