--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -1,7 +1,5 @@
 * xref:con_pipelines-concepts.adoc[1. Pipelines concepts]
-* xref:assembly_installing-pipelines.adoc[2. Installation]
-** xref:proc_installing-pipelines-operator.adoc[2.1 Installing the Pipelines Operator]
-** xref:proc_creating-custom-resources-for-pipelines-operator.adoc[2.2 Creating Custom Resources]
+* xref:proc_installing-pipelines-operator.adoc[2. Installing the Pipelines Operator]
 * xref:assembly_using-pipelines.adoc[3. Using pipelines]
 ** xref:proc_deploying-an-application-to-openshift.adoc[3.1 Deploying an application to OpenShift]
 ** xref:proc_defining-and-creating-pipeline-tasks.adoc[3.2 Defining and creating pipeline tasks]
