--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -1,6 +1,6 @@
 * xref:con_pipelines-concepts.adoc[1. Pipelines concepts]
 * xref:proc_installing-pipelines-operator.adoc[2. Installing the Pipelines Operator]
-* xref:assembly_using-pipelines.adoc[3. Using pipelines]
+* xref:assembly_using-pipelines.adoc[3. Using Pipelines]
 ** xref:proc_deploying-an-application-to-openshift.adoc[3.1 Deploying an application to OpenShift]
 ** xref:proc_defining-and-creating-pipeline-tasks.adoc[3.2 Defining and creating pipeline tasks]
 ** xref:proc_defining-and-creating-pipelineresources.adoc[3.3 Defining and creating pipeline resources]
