--- a/modules/ROOT/pages/proc_installing-pipelines-operator.adoc
+++ b/modules/ROOT/pages/proc_installing-pipelines-operator.adoc
@@ -9,7 +9,7 @@ OpenShift Pipelines can be installed by using the OpenShift Pipelines Operator i
 
 === Prerequisites
 
-* An OpenShift 4 cluster is required for installation. Visit link:try.openshift.com[try.openshift.com] for information on setting up an OpenShift 4 cluster.
+* An OpenShift 4 cluster is required for installation. Visit link:https://try.openshift.com[try.openshift.com] for information on setting up an OpenShift 4 cluster.
 
 === Procedure
 . In the OpenShift OperatorHub, navigate to *Operators* -> *OperatorHub*.
