--- a/modules/ROOT/pages/proc_installing_cli.adoc
+++ b/modules/ROOT/pages/proc_installing_cli.adoc
@@ -1,4 +1,5 @@
 = Installing the CLI
+
 In order to interact with Tekton from a terminal, you need to install the Tekton CLI first.
 
 == Installing from binary
@@ -10,7 +11,7 @@ In order to interact with Tekton from a terminal, you need to install the Tekton
 curl -LO https://github.com/tektoncd/cli/releases/download/v0.2.0/tkn_0.2.0_Darwin_x86_64.tar.gz
 ----
 
-.Extract tkn to your PATH:
+.Extract `tkn` to your PATH:
 ----
 sudo tar xvzf tkn_0.2.0_Darwin_x86_64.tar.gz -C /usr/local/bin tkn
 ----
