--- a/modules/ROOT/pages/proc_installing_cli.adoc
+++ b/modules/ROOT/pages/proc_installing_cli.adoc
@@ -23,7 +23,7 @@ sudo tar xvzf tkn_0.2.0_Darwin_x86_64.tar.gz -C /usr/local/bin tkn
 curl -LO https://github.com/tektoncd/cli/releases/download/v0.2.0/tkn_0.2.0_Linux_x86_64.tar.gz
 ----
 
-.Extract tkn to your PATH:
+.Extract `tkn` to your PATH:
 ----
 sudo tar xvzf tkn_0.2.0_Linux_x86_64.tar.gz -C /usr/local/bin/ tkn
 ----
