--- a/modules/ROOT/pages/assembly_cli_reference.adoc
+++ b/modules/ROOT/pages/assembly_cli_reference.adoc
@@ -8,6 +8,13 @@
 With the Tekton Pipelines command-line interface (CLI) you can interact with Tekton from a terminal. This section describes how to install it and lists the basic commands. 
 
 
+// CLI Installation Guide
+include::proc_installing_cli.adoc[leveloffset=+1]
+
+
+// CLI Reference
+include::ref_cli_reference.adoc[leveloffset=+1]
+
 
 
 
