--- a/modules/ROOT/pages/proc_uninstalling-pipelines-operator.adoc
+++ b/modules/ROOT/pages/proc_uninstalling-pipelines-operator.adoc
@@ -36,6 +36,6 @@ NOTE: The operator tile will indicate it is installed.
 
 . Once, the **OpenShift Pipelines Operator** descriptor screen appears, click **Uninstall**.
 
-. Select **Also completely remove the Operator from the selected namespace**, in the **Remove Operator Subscription** dialog box
+. Select **Also completely remove the Operator from the selected namespace**, in the **Remove Operator Subscription** dialog box.
 
 .Click **Remove**.
