--- a/modules/ROOT/pages/proc_uprgading_pipelines_operator.adoc
+++ b/modules/ROOT/pages/proc_uprgading_pipelines_operator.adoc
@@ -3,7 +3,7 @@
 
 OpenShift Pipelines upgrades are handled automatically via Operator Subscription. New updates will be installed as soon as they become available.
 
-[Uprgading from 0.5.0 or below]
+[NOTE]
 ====
 OpenShift Pipelines 0.5.2 has introduced changes incompatable with older versions. If the installed version is 0.5.0 or below, the operator *will not be automatically upgraded.*
 
