--- a/modules/ROOT/pages/proc_installing_cli.adoc
+++ b/modules/ROOT/pages/proc_installing_cli.adoc
@@ -1,10 +1,11 @@
+[id='cli-reference_{context}']
 = Installing the CLI
 
-In order to interact with Tekton from a terminal, you need to install the Tekton CLI first.
+In order to interact with Tekton from a terminal, you need to install the Tekton CLI (`tkn`).
 
 == Installing from binary
 
-=== For Mac OS X
+=== For macOS X
 
 .Get the `tar.xz`:
 ----
@@ -16,7 +17,7 @@ curl -LO https://github.com/tektoncd/cli/releases/download/v0.2.0/tkn_0.2.0_Darw
 sudo tar xvzf tkn_0.2.0_Darwin_x86_64.tar.gz -C /usr/local/bin tkn
 ----
 
-=== For Linux AMD 64
+=== For Linux AMD64
 
 .Get the `tar.xz`:
 ----
@@ -28,20 +29,20 @@ curl -LO https://github.com/tektoncd/cli/releases/download/v0.2.0/tkn_0.2.0_Linu
 sudo tar xvzf tkn_0.2.0_Linux_x86_64.tar.gz -C /usr/local/bin/ tkn
 ----
 
-=== For Linux ARM 64
+=== For Linux ARM64
 
 .Get the `tar.xz`:
 ----
 curl -LO https://github.com/tektoncd/cli/releases/download/v0.2.0/tkn_0.2.0_Linux_arm64.tar.gz
 ----
 
-.Extract tkn to your PATH:
+.Extract `tkn` to your PATH:
 ----
 sudo tar xvzf tkn_0.2.0_Linux_arm64.tar.gz -C /usr/local/bin/ tkn
 ----
 
-== Installing with Go
-You should have link:https://golang.org/doc/install[Go] installed and set up your go environment correctly. 
+== Installing with Go language
+You should have link:https://golang.org/doc/install[Go language] installed and set up your go environment correctly. 
 
 .To install Tekton CLI with Go, run:
 ----
