--- a/modules/ROOT/pages/proc_installing_cli.adoc
+++ b/modules/ROOT/pages/proc_installing_cli.adoc
@@ -50,8 +50,8 @@ sudo tar xvzf tkn_0.2.2_Linux_arm64.tar.gz -C /usr/local/bin/ tkn
 == Installing with Go language
 You should have link:https://golang.org/doc/install[Go language] installed and the go environment set up correctly.
 
-. To install Tekton CLI with Go, run:
-+
+To install Tekton CLI with Go, run:
+
 ----
 GO111MODULE="on" go get github.com/tektoncd/cli@v0.2.2
 ----
