updated-nav-adoc

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -1,14 +1,14 @@
-* xref:con_pipelines-concepts.adoc[1. Pipelines concepts]
-* xref:proc_installing-pipelines-operator.adoc[2. Installing the Pipelines Operator]
-* xref:assembly_using-pipelines.adoc[3. Using Pipelines]
-** xref:proc_deploying-an-application-to-openshift.adoc[3.1 Deploying an application to OpenShift]
-** xref:proc_defining-and-creating-pipeline-tasks.adoc[3.2 Defining and creating pipeline tasks]
-** xref:proc_defining-and-creating-pipelineresources.adoc[3.3 Defining and creating pipeline resources]
-** xref:proc_assembling-a-pipeline.adoc[3.4 Assembling a pipeline]
-** xref:proc_triggering-and-running-a-pipeline.adoc[3.5 Triggering and running a pipeline]
-** xref:proc_checking-pipeline-and-application-status.adoc[3.6 Checking pipeline and application status]
-* xref:assembly_cli_reference.adoc[4. CLI Reference]
-** xref:proc_installing_cli.adoc[4.1 Installing CLI]
-** xref:ref_cli_reference.adoc[4.2 Basic Commands]
+. xref:con_pipelines-concepts.adoc[Pipelines concepts]
+. xref:assembly_installing-pipelines.adoc[Installing the Pipelines Operator]
+. xref:assembly_using-pipelines.adoc[Using Pipelines]
+.. xref:proc_deploying-an-application-to-openshift.adoc[Deploying an application to OpenShift]
+.. xref:proc_defining-and-creating-pipeline-tasks.adoc[Defining and creating pipeline tasks]
+.. xref:proc_defining-and-creating-pipelineresources.adoc[Defining and creating pipeline resources]
+.. xref:proc_assembling-a-pipeline.adoc[Assembling a pipeline]
+.. xref:proc_triggering-and-running-a-pipeline.adoc[Triggering and running a pipeline]
+.. xref:proc_checking-pipeline-and-application-status.adocChecking pipeline and application status]
+. xref:assembly_cli_reference.adoc[CLI Reference]
+.. xref:proc_installing_cli.adoc[Installing CLI]
+.. xref:ref_cli_reference.adoc[Basic Commands]
 
 
