--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -1,3 +1,4 @@
+[loweralpha]
 . xref:con_pipelines-concepts.adoc[Pipelines concepts]
 . xref:assembly_installing-pipelines.adoc[Installing the Pipelines Operator]
 . xref:assembly_using-pipelines.adoc[Using Pipelines]
@@ -6,7 +7,7 @@
 .. xref:proc_defining-and-creating-pipelineresources.adoc[Defining and creating pipeline resources]
 .. xref:proc_assembling-a-pipeline.adoc[Assembling a pipeline]
 .. xref:proc_triggering-and-running-a-pipeline.adoc[Triggering and running a pipeline]
-.. xref:proc_checking-pipeline-and-application-status.adocChecking pipeline and application status]
+.. xref:proc_checking-pipeline-and-application-status.adoc[Checking pipeline and application status]
 . xref:assembly_cli_reference.adoc[CLI Reference]
 .. xref:proc_installing_cli.adoc[Installing CLI]
 .. xref:ref_cli_reference.adoc[Basic Commands]
