--- a/modules/ROOT/pages/proc_uninstalling-pipelines-operator.adoc
+++ b/modules/ROOT/pages/proc_uninstalling-pipelines-operator.adoc
@@ -3,7 +3,7 @@
 
 == Deleting the Project
 
-.Procedure
+=== Procedure
 
 . In the OpenShift Web Console, navigate to **Home > Projects** .
 
@@ -21,10 +21,9 @@
 
 
 
-
 == Uninstalling the pipelines operator
 
-.Procedure
+=== Procedure
 
 . Go to **Catalog > OperatorHub** in the Web Console.
 
