--- a/modules/ROOT/pages/proc_installing-pipelines-operator.adoc
+++ b/modules/ROOT/pages/proc_installing-pipelines-operator.adoc
@@ -10,10 +10,12 @@ OpenShift Pipelines can be installed by using the operator indexed in the OpenSh
 === Prerequisites
 
 * An OpenShift 4 cluster is required for installation. Visit link:try.openshift.com[try.openshift.com] for information on setting up an OpenShift 4 cluster.
-* Download the Tekton CLI - `tkn`, and add it's location to your `PATH` environment variable.
+
+* Download the Tekton CLI `tkn`, and add it's location to your `PATH` environment variable.
 
 
 === Procedure
+
 . In the Web Console, navigate to *Catalog* -> *OperatorHub*.
 
 . Use the *Filter by keyword* box to search for OpenShift Pipelines Operator in the catalog. Click on the *OpenShift Pipelines Operator* tile.
@@ -30,7 +32,7 @@ image::openshift_pipelines_install_subscription.png[]
 ====
 * The operator is installed automatically into the `openshift-operators` namespace. The option to install in *A specific namespace on the cluster* should be disabled.  The OpenShift Pipelines operator should watch for Tekton Custom Resources across all namespaces.
 * OpenShift Pipelines upgrades are handled automatically through Operator Subscription. New updates will be installed as soon as they become available.
-** OpenShift Pipelines 0.5.2 has introduced changes incompatible with older versions. If the installed version is 0.5.0 or below, the operator will not be automatically upgraded. To upgrade from the 0.5.0 or below, link:proc_uninstalling-pipelines-operator.adoc[uninstall the operator] and then install it again.
+** OpenShift Pipelines 0.5.2 has introduced changes incompatible with older versions. If the installed version is 0.5.0 or below, the operator will not be automatically upgraded. To upgrade from the 0.5.0 or below, link:https://openshift.github.io/pipelines-docs/docs/proc_uninstalling-pipelines-operator.html[uninstall the operator] and then install it again.
 ====
 
 . In the *Subscription Overview* screen, verify the installation of the operator by confirming that the *UPGRADE STATUS* is `1 installed`.
