--- a/modules/ROOT/pages/proc_installing-pipelines-operator.adoc
+++ b/modules/ROOT/pages/proc_installing-pipelines-operator.adoc
@@ -11,6 +11,8 @@ OpenShift Pipelines can be installed by using the operator indexed in the OpenSh
 
 * An OpenShift 4 cluster is required for installation. Visit link:try.openshift.com[try.openshift.com] for information on setting up an OpenShift 4 cluster.
 
+* You must have cluster administrator privileges to install and use the Pipelines Operator.
+
 * Download the Tekton CLI `tkn`, and add it's location to your `PATH` environment variable.
 
 
